--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -80,6 +80,8 @@ jobs:
 
     - name: Run tests
       run: npm test
+      env:
+        NODE_ENV: test
 
     - name: Run security audit
       run: npm audit --audit-level moderate
